--illegal-access=warn VM 옵션 제거
OpenJDK 64-Bit Server VM warning: Ignoring option --illegal-access=warn; support was removed in 17.0

모든 프로젝트가 JDK 17 이상이므로, 해당 옵션은 제거한다.